# KNN_Weight

./: .gitignore  KNN_Impove.ipynb  KNN_Impove_IMDb.ipynb  KNN_Weight_AGNews.ipynb  README.md  pyproject.toml  requirements.txt
knn_weight/: __init__.py  data.py  experiment.py  models.py  vectorize.py
scripts/: run_agnews.py  run_imdb.py
src/knn_weight/: __init__.py  data.py  knn.py  vectorize.py
