[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knn-weight"
version = "0.1.0"
description = "KNN (cosine) and weighted cosine KNN for text classification (extracted from notebooks)."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "datasets>=2.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

